修改工程名

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -13,12 +13,12 @@ spring:
     multipart:
       max-request-size: 100Mb
   application: 
-    name: platform-codemanager-supercode
+    name: platform-marketing-supercode-test
   cloud: 
     config:
       uri: http://192.168.2.216:7001
       profile: dev
-      label: code
+      label: master
      
 eureka: 
   instance:
