--- a/pom.xml
+++ b/pom.xml
@@ -79,11 +79,19 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+		<!-- 对象映射 -->
 		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+		<!-- jwt安全 -->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.4.0</version>
+		</dependency>
+
 		<!-- fastjson 依赖 -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
