--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -16,8 +16,8 @@ spring:
     name: platform-marketing-supercode-test
   cloud:
     config:
-      uri: http://192.168.2.216:7001
-      profile: dev
+      uri: http://192.168.2.221:7001
+      profile: test
       label: master
      
 eureka: 
@@ -26,5 +26,7 @@ eureka:
     non-secure-port: ${server.port}
   client:
     service-url: 
-      defaultZone:  /eureka/,http://192.168.2.216:8762/eureka/
+      defaultZone: http://192.168.2.216:8761/eureka/,http://192.168.2.216:8762/eureka/
+
+    
 
