--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,3 +1,17 @@
+app: 
+  id: platform-marketing
+apollo: 
+  meta: http://192.168.20.51:8080
+  bootstrap: 
+    enabled: true
+    eagerLoad: 
+      enabled: true
+    namespaces: application,public.conf
+logging: 
+  level: 
+    com:
+      gf: 
+        controller: debug
 server: 
   port: 9071
   tomcat:
@@ -13,12 +27,7 @@ spring:
     multipart:
       max-request-size: 100Mb
   application: 
-    name: platform-marketing-supercode-test
-  cloud:
-    config:
-      uri: http://192.168.2.221:7001
-      profile: test
-      label: master
+    name: platform-marketing-supercode
      
 eureka: 
   instance:
@@ -26,7 +35,6 @@ eureka:
     non-secure-port: ${server.port}
   client:
     service-url: 
-      defaultZone: http://192.168.2.216:8761/eureka/,http://192.168.2.216:8762/eureka/
+      defaultZone: http://192.168.20.220:8761/eureka/
 
-    
 
