异步调用窜货捕获异常

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ apollo:
     enabled: true
     eagerLoad: 
       enabled: true
-    namespaces: application,public.conf
+    namespaces: application,dev.public.conf
 logging: 
   level: 
     com:
