info:新增状态拦截

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -24,7 +24,11 @@ spring:
       max-request-size: 100Mb
   application: 
     name: platform-marketing-supercode
-     
+  zipkin:
+    base-url: http://192.168.10.212:9412
+  sleuth:
+    sampler:
+      probability: 1.0
 eureka: 
   instance:
     prefer-ip-address: true
