--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -25,7 +25,7 @@ spring:
   application: 
     name: platform-marketing-supercode
   zipkin:
-    base-url: http://192.168.10.212:9412
+    baseUrl: http://192.168.10.212:9412/
     sender:
       type: web
   sleuth:
