--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -25,12 +25,12 @@ spring:
   application: 
     name: platform-marketing-supercode
   zipkin:
-    baseUrl: http://192.168.10.212:9412/
+    base-url: http://192.168.20.220:9412/
     sender:
       type: web
   sleuth:
     sampler:
-      probability: 1
+      probability: 1.0f
 
 eureka: 
   instance:
