--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -26,6 +26,8 @@ spring:
     name: platform-marketing-supercode
   zipkin:
     base-url: http://192.168.20.220:9411
+    sender:
+      type: web
   sleuth:
     sampler:
       probability: 1.0
