--- a/pom.xml
+++ b/pom.xml
@@ -264,6 +264,14 @@
 			<version>RELEASE</version>
 			<scope>compile</scope>
 		</dependency>
+		
+	<dependency>
+        <groupId>com.ctrip.framework.apollo</groupId>
+         <artifactId>apollo-client</artifactId>
+        <version>1.3.0</version>
+    </dependency>
+
+		
 	</dependencies>
 	
 	<!-- 指定spring cloud版本， 新版本使用Finchley.SR2 -->
