--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -13,12 +13,7 @@ server:
 spring:
   application:
     name: platform-marketing-supercode
-  zipkin:
-    base-url: http://192.168.20.220:9411
-    sender:
-      type: web
-  sleuth:
-    sampler:
-      probability: 1.0
 
 
+#  ALTER TABLE `jgw_marketing`.`marketing_saler_order_form`
+#  MODIFY COLUMN `Status` tinyint(2) NULL DEFAULT 1 COMMENT '必填1非必填2' AFTER `ColumnName`;
