--- a/pom.xml
+++ b/pom.xml
@@ -40,17 +40,17 @@
         </dependency>
 
 
-		<dependency>
-			<groupId>com.alipay.sofa</groupId>
-			<artifactId>tracer-sofa-boot-starter</artifactId>
-			<version>2.4.0</version>
-		</dependency>
-
-<!--		-->
 <!--		<dependency>-->
-<!--			<groupId>org.springframework.cloud</groupId>-->
-<!--			<artifactId>spring-cloud-starter-sleuth</artifactId>-->
+<!--			<groupId>com.alipay.sofa</groupId>-->
+<!--			<artifactId>tracer-sofa-boot-starter</artifactId>-->
+<!--			<version>2.4.0</version>-->
 <!--		</dependency>-->
+
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
 
 
 
